--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -1,25 +1,28 @@
 NAME		= minishell
 
 SRCS	= \
-			srcs/main.c \
-			srcs/builtins.c
+			main.c \
+			my_echo.c \
+			my_cd.c \
+			handle_error.c
 
 OBJS		= $(patsubst %.c, %.o, $(SRCS))
 
 CC			= gcc
 FLAGS		= #-Wall -Wextra -Werror
-HEADER		= srcs/minishell.h
+HEADER		= minishell.h
 
 RM			= rm -f
 
-all:		init ${NAME}
+all:		init ${NAME} ${HEADER}
 
 init:
-			make -C srcs/libft
+			make -C libft
 
 $(NAME):	$(OBJS) $(HEADER)
+
 #MAC:
-			$(CC) $(FLAGS) $(OBJS) -ltermcap -o $(NAME)
+			 $(CC) $(FLAGS) ${OBJS} -ltermcap -Llibft -lft -o $(NAME)
 
 #Lnx:
 			#$(CC) $(FLAGS) $? $(HEADER) -ltermcap -o $(NAME)
@@ -31,19 +34,19 @@ $(NAME):	$(OBJS) $(HEADER)
 	# $(CC) $(FLAGS) main.c -Llibft -lft
 
 clean:
-			${RM} ${OBJS}
-			make -C srcs/libft clean
+			${RM} ${OBJS} *.out
+			make -C libft clean
 
 fclean:		clean
 			$(RM) -rf $(NAME)
-			make -C srcs/libft fclean
+			make -C libft fclean
 
 re:			fclean all
 
 norm:
 			norminettev2 $(SRCS)
 			norminettev2 $(HEADER)
-			norminettev2 srcs/libft/*.c
-			norminettev2 srcs/libft/*.h
+			norminettev2 libft/*.c
+			norminettev2 libft/*.h
 
 .PHONY:		all clean fclean re
