--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(minishell C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(minishell srcs/main.c srcs/builtins.c)
+include_directories(.)
+
+add_subdirectory(./srcs/libft)
+
+add_executable(minishell srcs/main.c srcs/my_echo.c srcs/handle_error.c srcs/my_cd.c)
+target_link_libraries(minishell termcap libft)
