--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -4,9 +4,10 @@ SRCS	= \
 			main.c \
 			my_echo.c \
 			my_cd.c \
-			handle_error.c \
 			my_pwd.c \
-			my_export.c
+			my_export.c \
+			my_fork.c \
+			utils.c
 
 OBJS		= $(patsubst %.c, %.o, $(SRCS))
 
