--- a/kirill/Makefile
+++ b/kirill/Makefile
@@ -21,7 +21,8 @@ SRC = main.c parser.c ft_list.c utils.c add_redirect.c \
 			srcs/my_fork.c \
 			srcs/my_unset.c \
 			srcs/utils.c \
-			srcs/my_env.c
+			srcs/my_env.c \
+			srcs/another_exit.c
 
 OBJ = $(patsubst %.c, %.o, $(SRC))
 
