--- a/kirill/Makefile
+++ b/kirill/Makefile
@@ -21,6 +21,7 @@ SRC = main.c parser.c ft_list.c utils.c add_redirect.c \
 			srcs/my_unset.c \
 			srcs/utils.c \
 			srcs/my_env.c \
+			srcs/my_heredoc.c \
 			srcs/my_exit.c
 
 OBJ = $(patsubst %.c, %.o, $(SRC))
