--- a/kirill/Makefile
+++ b/kirill/Makefile
@@ -12,7 +12,7 @@
 
 NAME = minishell
 
-SRC = main.c parser.c ft_list.c utils.c add_redirect.c \
+SRC = main.c parser.c ft_list.c utils.c add_redirect.c dollar_aizhan.c\
 			srcs/executor.c \
 			srcs/my_echo.c \
 			srcs/my_cd.c \
@@ -36,7 +36,7 @@ all: $(NAME)
 
 $(NAME): $(INCLUDE) $(SRC)
 	make bonus -C libft
-	gcc $(SRC) -g -Llibft -lft -lreadline -L/Users/cvirgin/.brew/opt/readline/lib -I/Users/cvirgin/.brew/opt/readline/include -o $(NAME)
+	gcc $(SRC) -g -Llibft -lft -lreadline -L/Users/rchalmer/.brew/opt/readline/lib -I/Users/rchalmer/.brew/opt/readline/include -o $(NAME)
 	#gcc $(SRC) -g -Llibft -lft -lreadline -L/usr/local/opt/readline/lib -I/usr/local/opt/readline/include -o $(NAME)
 
 
