--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
-cmake-build-debug
 kirill/cmake-build-debug
-a.out
-*.o
-kirill/srcs/minishell
-kirill/minishell
-/cmake-build-debug/
-/kirill/cmake-build-debug/
+kirill/.idea
+*.idea
+*.dSYM
 .DS_Store
-*/.DS_Store
-*/.idea
+*.o
+*.out
+*.a
 .idea
-/cmake-build-debug/
