--- a/kirill/Makefile
+++ b/kirill/Makefile
@@ -22,7 +22,8 @@ SRC = main.c parser.c ft_list.c utils.c add_redirect.c dollar_aizhan.c\
 			srcs/utils.c \
 			srcs/my_env.c \
 			srcs/my_heredoc.c \
-			srcs/my_exit.c
+			srcs/my_exit.c \
+			srcs/utils_export.c
 
 OBJ = $(patsubst %.c, %.o, $(SRC))
 
