--- a/kirill/Makefile
+++ b/kirill/Makefile
@@ -12,7 +12,7 @@
 
 NAME = minishell
 
-SRC = main.c parser.c ft_list.c utils.c add_redirect.c dollar_aizhan.c\
+SRC = main.c parser.c ft_list.c utils.c add_redirect.c dollar_aizhan.c redirect4.c ft_list2.c\
 			srcs/executor.c \
 			srcs/my_echo.c \
 			srcs/my_cd.c \
