working on norm for executor -> heredoc

--- a/kirill/CMakeLists.txt
+++ b/kirill/CMakeLists.txt
@@ -5,16 +5,16 @@ set(CMAKE_C_STANDARD 99)
 
 #add_library(readline)
 
-include_directories(/Users/cvirgin/.brew/opt/readline/lib/)
-#include_directories(/Users/rchalmer/.brew/opt/readline/lib/)
+#include_directories(/Users/cvirgin/.brew/opt/readline/lib/)
+include_directories(/Users/rchalmer/.brew/opt/readline/lib/)
 
-link_directories(/Users/cvirgin/.brew/opt/readline/lib/)
-#link_directories(/Users/rchalmer/.brew/opt/readline/lib/)
+#link_directories(/Users/cvirgin/.brew/opt/readline/lib/)
+link_directories(/Users/rchalmer/.brew/opt/readline/lib/)
 
-find_library(NAMES libreadline PATHS /Users/cvirgin/.brew/opt/readline/lib/ /Users/cvirgin/.brew/opt/readline/lib/)
-#find_library(NAMES libreadline PATHS /Users/cvirgin/.brew/opt/readline/lib/ /Users/rchalmer/.brew/opt/readline/lib/)
-set(INCLUDE_DIR /Users/cvirgin/.brew/opt/readline/lib/)
-#set(INCLUDE_DIR /Users/rchalmer/.brew/opt/readline/lib/)
+#find_library(NAMES libreadline PATHS /Users/cvirgin/.brew/opt/readline/lib/ /Users/cvirgin/.brew/opt/readline/lib/)
+find_library(NAMES libreadline PATHS /Users/rchalmer/.brew/opt/readline/lib/ /Users/rchalmer/.brew/opt/readline/lib/)
+#set(INCLUDE_DIR /Users/cvirgin/.brew/opt/readline/lib/)
+set(INCLUDE_DIR /Users/rchalmer/.brew/opt/readline/lib/)
 
 add_subdirectory(libft)
 
@@ -39,5 +39,7 @@ add_executable(minishell
 		srcs/utils_export.c
 		srcs/utils_part_two.c
 		srcs/utils_part_three.c
+		redirect4.c
+		ft_list2.c
         )
 target_link_libraries(minishell readline termcap libft)
