--- a/kirill/Makefile
+++ b/kirill/Makefile
@@ -39,8 +39,8 @@ all: $(NAME)
 
 $(NAME): $(INCLUDE) $(SRC)
 	make bonus -C libft
-	gcc $(FLAGS) $(SRC) -g -Llibft -lft -lreadline -L/Users/cvirgin/.brew/opt/readline/lib -I/Users/cvirgin/.brew/opt/readline/include -o $(NAME)
-	#gcc $(SRC) -g -Llibft -lft -lreadline -L/Users/rchalmer/.brew/opt/readline/lib -I/Users/rchalmer/.brew/opt/readline/include -o $(NAME)
+	#gcc $(FLAGS) $(SRC) -g -Llibft -lft -lreadline -L/Users/cvirgin/.brew/opt/readline/lib -I/Users/cvirgin/.brew/opt/readline/include -o $(NAME)
+	gcc $(SRC) -g -Llibft -lft -lreadline -L/Users/rchalmer/.brew/opt/readline/lib -I/Users/rchalmer/.brew/opt/readline/include -o $(NAME)
 	#gcc $(SRC) -g -Llibft -lft -lreadline -L/usr/local/opt/readline/lib -I/usr/local/opt/readline/include -o $(NAME)
 # TODO use -W-W-Werror
 
